# Terminal-cube

./: Assem.asm  CMakeLists.txt  README.md  TODO.md  gameOverScr.c  gameOverScr.h  main.c  structure.h
logicHandler/: logic.c  logic.h  objectHandler.c  objectHandler.h
object/: block.c  block.h  mainObject.c  mainObject.h  spike.c  spike.h
